--- a/vignettes/Data_formats.Rmd
+++ b/vignettes/Data_formats.Rmd
@@ -57,29 +57,29 @@ The package also includes data on floral visitors (`pollinators`), but this data
 
 **CXR functionality**
 
-In the package there are, broadly speaking, two types of functions. The first set (optimization functions) includes `cxr_optimize`, which fits the species interaction models to empirical data, and `ER_optimize`, which fits overall response and effect parameters per focal species to empirical data. Both `cxr_optimize` and `ER_optimize` accept field data and numerically estimate parameters of a model provided by the user. The second set (coexistence functions, including `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility`) take these estimates and return coexistence metrics for a single species or pairs of them.
+In the package there are, broadly speaking, two types of functions. The first set (optimization functions) includes `pm_optim`, which fits the species interaction models to empirical data, and `er_optim`, which fits overall response and effect parameters per focal species to empirical data. Both `pm_optim` and `er_optim` accept field data and numerically estimate parameters of a model provided by the user. The second set (coexistence functions, including `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility`) take these estimates and return coexistence metrics for a single species or pairs of them.
 
 **Data for optimization functions**
 
 ```{r}
-?cxr_optimize
+?pm_optim
 ```
 
-The data to provide to `cxr_optimize` is the fitness metric (log-transformed) of each observation, and the number of competitors of each species (in matrix format) for each observation. Thus, the length of `log.fitness` and the number of rows of `focal.comp.matrix` must match. Likewise, if covariates are provided, the number of rows of that covariates matrix/dataframe must also match the number of observations. This requires some data formating to create the `focal.comp.matrix`.
+The data to provide to `pm_optim` is the fitness metric (log-transformed) of each observation, and the number of competitors of each species (in matrix format) for each observation. Thus, the length of `log.fitness` and the number of rows of `focal.comp.matrix` must match. Likewise, if covariates are provided, the number of rows of that covariates matrix/dataframe must also match the number of observations. This requires some data formating to create the `focal.comp.matrix`.
 
 ```{r}
-?ER_optimize
+?er_optim
 ```
 
-The data for `ER_optimize` is slightly different, since in this function, an indeterminate number of species are fit at once. Aside from the initial values of the different parameters and their bounds, the main argument is `sp.data`. This should be a dataframe with columns: `site`, `focal`, `fitness`, `competitor`, `number`. This format is mostly equivalent to the one of our competition dataset, but be aware of two particularities: 1) in this function (unlike in `cxr_optimize`) the set of focal species must equal the set of competitor species. 2) missing focal-competitor pairs must be explicitly set to zero in the dataset. These constraints are due to the parallel nature of the parameter estimation.
+The data for `er_optim` is slightly different, since in this function, an indeterminate number of species are fit at once. Aside from the initial values of the different parameters and their bounds, the main argument is `sp.data`. This should be a dataframe with columns: `site`, `focal`, `fitness`, `competitor`, `number`. This format is mostly equivalent to the one of our competition dataset, but be aware of two particularities: 1) in this function (unlike in `pm_optim`) the set of focal species must equal the set of competitor species. 2) missing focal-competitor pairs must be explicitly set to zero in the dataset. These constraints are due to the parallel nature of the parameter estimation.
 
 **Data for coexistence functions**
 
-The coexistence functions `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility` accept, simply, pairwise interaction coefficients, and eventually, other parameters such as per capita fecundities in the absence of competition ($\lambda$), or competitive responses $r$. These metrics can be obtained with the output from `cxr_optimize` or `ER_optimize` or, in turn, with independent estimates.
+The coexistence functions `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility` accept, simply, pairwise interaction coefficients, and eventually, other parameters such as per capita fecundities in the absence of competition ($\lambda$), or competitive responses $r$. These metrics can be obtained with the output from `pm_optim` or `er_optim` or, in turn, with independent estimates.
 
 **Population dynamics models**
 
-The `cxr` package provides users with a flexible interface to fit their own models and data, and at the same time incorporates state-of-the-art dynamic models for annual plant populations. The five models included in the package (functions `BH_1` to `BH_5`) estimate the per-germinant fecundity $F_i$ of a plant individual, in the context of an annual plant model with seed bank:
+The `cxr` package provides users with a flexible interface to fit their own models and data, and at the same time incorporates state-of-the-art dynamic models for annual plant populations. The five models included in the package (functions `model_BH1` to `model_BH5`) estimate the per-germinant fecundity $F_i$ of a plant individual, in the context of an annual plant model with seed bank:
 
 $$N_{i,t+1}^s/N_{i,t}^s = (1-g_{i})s_i + g_iF_i$$
 
@@ -89,11 +89,11 @@ Per-germinant fecundity is a composite term potentially dependant on intrinsic s
 
 | cxr function | Formula |
 | -----------  | ----------- |
-| BH_1    | $F_i = \lambda_i$ |
-| BH_2    | $F_i = \frac{\lambda_i}{1+\alpha N*}$ |
-| BH_3    | $F_i = \frac{\lambda_i}{1+ (\sum_{j=1}^n \alpha_{ij} N_j})$ |
-| BH_4    | $F_i = \frac{\lambda_i (1+ \sum_{k = 1}^c \Theta_{ik}C_k)}{1+ (\sum_{j=1}^n (\alpha_{ij} + \sum_{k=1}^c \phi_{ik}C_k) N_j)}$ |
-| BH_5    | $F_i = \frac{\lambda_i (1+ \sum_{k = 1}^c \Theta_{ik}C_k)}{1+ (\sum_{j=1}^n (\alpha_{ij} + \sum_{k=1}^c \phi_{ijk}C_k) N_j)}$ |
+| model_BH1    | $F_i = \lambda_i$ |
+| model_BH2    | $F_i = \frac{\lambda_i}{1+\alpha N*}$ |
+| model_BH3    | $F_i = \frac{\lambda_i}{1+ (\sum_{j=1}^n \alpha_{ij} N_j})$ |
+| model_BH4    | $F_i = \frac{\lambda_i (1+ \sum_{k = 1}^c \Theta_{ik}C_k)}{1+ (\sum_{j=1}^n (\alpha_{ij} + \sum_{k=1}^c \phi_{ik}C_k) N_j)}$ |
+| model_BH5    | $F_i = \frac{\lambda_i (1+ \sum_{k = 1}^c \Theta_{ik}C_k)}{1+ (\sum_{j=1}^n (\alpha_{ij} + \sum_{k=1}^c \phi_{ijk}C_k) N_j)}$ |
 
 Users can estimate model parameters using the provided formulations or develop their own, bearing in mind two constraints. First, the provided models need to comply with the set of parameters of the general formulation, i.e.: 
 
@@ -105,4 +105,4 @@ A complementary set of two models is also provided, that estimate competitive ef
 
 $$F_i = \frac{\lambda_i}{1+r_i \sum_j^n e_j N_j^a}$$
 
-where $r_i$ is the species’ competitive response and $e_i$ is the species’ competitive effect; our models only differ on whether $\lambda$ is taken as a fixed parameter (function `EffectResponse.R`) or is optimized as well in the routine (function `EffectResponse_lambda.R`).
+where $r_i$ is the species’ competitive response and $e_i$ is the species’ competitive effect; our models only differ on whether $\lambda$ is taken as a fixed parameter (function `model_ER.R`) or is optimized as well in the routine (function `model_ER_lambda.R`).
